--- a/styles.css
+++ b/styles.css
@@ -1,159 +1,209 @@
 @font-face {
-    font-family: "mk grotesk";
-    src: url(fonts/HankenGrotesk-VariableFont_wght.ttf);
+  font-family: "mk grotesk";
+  src: url(fonts/HankenGrotesk-VariableFont_wght.ttf);
 }
-body{
-    margin: 0;
-    padding: 0;
-    color: white;
-    font-family: "mk grotesk";
-    overflow: hidden;
+body {
+  margin: 0;
+  padding: 0;
+  color: white;
+  font-family: "mk grotesk";
+  overflow: hidden;
 }
-.container{
-    position:absolute;
-    top:0;
-    background: linear-gradient(to bottom, #15009b,#2c2740);
-    align-items: center;
-    text-align: center;
-    height: 120dvh;
-    width:100%;
-    padding: 1rem;
-}
-
-.title h1{
-    font-size: 5rem;
-    margin-bottom: 0;
-}
-.title p{
-    margin-top: 0;
-    font-size: 2rem;
-    font-style: normal;
-    text-transform: uppercase;
+.container {
+  position: absolute;
+  top: 0;
+  background: linear-gradient(to bottom, #15009b, #2c2740);
+  align-items: center;
+  text-align: center;
+  height: 120dvh;
+  width: 100%;
+  padding: 1rem;
 }
 
-#startBtn{
-    border:none;
-    border-radius: 15px;
-    padding: 25px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    color: #12229d;
-    font-size: 1rem;
+.title h1 {
+  font-size: 5rem;
+  margin-bottom: 0;
 }
-.breaks-section{
-    background-color: rgba(240, 248, 255, 0.39);
-    position: relative;
-    justify-self: center;
-    align-self: center;
-    border-radius: 15px;
-    width: 40vw;
-    height: 60vh;
-    padding: 10px;
-    display:flex;
-    flex-direction: column;
-    justify-content: start;
-    align-content: center;
-    
-}
-#titleMain{
-    font-size: 2rem;
-    text-transform: uppercase;
-    font-weight: 400;
-}
-.breaks-section button{
-    border:none;
-    border-radius: 10px;
-    padding: 10px;
-    font-family: 'mk grotesk';
-    
-
-    
-}
-#setBreak{
-    display:none;
-    justify-content: center;
-    color: #050a30;
-    background-color: rgba(223, 223, 223, 0.466);
-    position: relative;
-    justify-self:center;
-    z-index: 9999;
-    width: 60%;
-    border-radius: 15px;
-    padding: 6px;
-    transform: translateY(-20px);
-    align-items: center;
-    opacity: 0;
-    transition: all .2s ease;
-    
-}
-#addBreak{
-    cursor:pointer;
-    transition: all .5s ease;
-}
-#addBreak:hover{
-    background-color: #050a30;
-    color:white;
-}
-#setBreak .selectTime{
-    
-    position: relative;
-    display: inline-block;
-    margin: 10px;
-
-}
-#setBreak select::-webkit-scrollbar{
-    width: 5px
-
+.title p {
+  margin-top: 0;
+  font-size: 2rem;
+  font-style: normal;
+  text-transform: uppercase;
 }
 
-.timeBtn{
-    /* background-color: transparent; */
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    border-radius: 4px;
-    cursor:pointer;
+#startBtn {
+  border: none;
+  border-radius: 15px;
+  padding: 25px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  color: #12229d;
+  font-size: 1rem;
+  cursor: pointer;
+}
+#startBtn:hover {
+  background-color: rgba(255, 255, 255, 0.466);
+  color: #050a30;
+  transition: all 0.3s ease;
+}
+.breaks-section {
+  background-color: rgba(240, 248, 255, 0.39);
+  position: relative;
+  justify-self: center;
+  align-self: center;
+  border-radius: 15px;
+  width: 30vw;
+  min-height: 60vh;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-content: center;
+}
+#titleMain {
+  font-size: 2rem;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+.breaks-section button {
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  font-family: "mk grotesk";
+}
+#setBreak {
+  display: none;
+  justify-content: center;
+  color: #050a30;
+  background-color: rgba(223, 223, 223, 0.466);
+  position: relative;
+  justify-self: center;
+  z-index: 9999;
+  width: 60%;
+  border-radius: 15px;
+  padding: 6px;
+  transform: translateY(-20px);
+  align-items: center;
+  opacity: 0;
+  transition: all 0.2s ease;
+}
+#addBreak {
+  cursor: pointer;
+  transition: all 0.5s ease;
+  align-content: center;
+}
+#addBreak:hover {
+  background-color: #050a30;
+  color: white;
 }
 
-#createBreakBtn{
-    background-color: #050a30;
-    margin: 10px;
-    color:white;
-    padding:10px;
-    cursor:pointer;
+#setBreak .selectTime {
+  position: relative;
+  display: inline-block;
+  margin: 10px;
 }
-#dropdownHours{
-    display: none; /* Oculto por defecto */
-    position: absolute;
-    background: white;
-    border: 1px solid #ccc;
-    max-height: 150px; /* 🔥 Limita la altura */
-    overflow-y: auto; /* Activa el scroll */
-    
+#setBreak select::-webkit-scrollbar {
+  width: 5px;
 }
 
-.dropdown{
-    display: none; /* Oculto por defecto */
-    position: absolute;
-    background: white;
-    border: 1px solid #ccc;
-    max-height: 150px; /* 🔥 Limita la altura */
-    overflow-y: auto; /* Activa el scroll */
-    width: 60px;
-    border-radius:15px;
-    scrollbar-width: none;
+.timeBtn {
+  /* background-color: transparent; */
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  border-radius: 4px;
+  cursor: pointer;
+}
 
-    opacity: 0;
-    transform: translateY(-10px);
-    transition: all .3s ease
-    
+#createBreakBtn {
+  background-color: #050a30;
+  margin: 10px;
+  color: white;
+  padding: 10px;
+  cursor: pointer;
+}
+#dropdownHours {
+  display: none; /* Oculto por defecto */
+  position: absolute;
+  background: white;
+  border: 1px solid #ccc;
+  max-height: 150px; /* 🔥 Limita la altura */
+  overflow-y: auto; /* Activa el scroll */
+}
+
+.dropdown {
+  display: none; /* Oculto por defecto */
+  position: absolute;
+  background: white;
+  border: 1px solid #ccc;
+  max-height: 150px; /* 🔥 Limita la altura */
+  overflow-y: auto; /* Activa el scroll */
+  width: 60px;
+  border-radius: 15px;
+  scrollbar-width: none;
+
+  opacity: 0;
+  transform: translateY(-10px);
+  transition: all 0.3s ease;
 }
 
 .dropdown div {
-    padding: 5px;
-    cursor: pointer;
-    
+  padding: 5px;
+  cursor: pointer;
 }
 .dropdown div:hover {
-    background: #a56262;
+  background: #a56262;
+}
+#breakCreated img {
+  cursor: pointer;
+
+  transition: all 0.5s ease;
+  padding: 4px;
+}
+#deleteBreak {
+  cursor: pointer;
+
+  transition: all 0.5s ease;
+}
+@keyframes shake {
+  25% {
+    transform: rotate(3deg);
+  }
+  50% {
+    transform: rotate(-6deg);
+  }
+  75% {
+    transform: rotate(9deg);
+  }
+}
+#breakCreated img:hover {
+  animation: shake 0.5s ease-in-out;
+  background-color: #e2efff;
+  border-radius: 15px;
+  transform: scale(1.2);
+}
+#breakCreated {
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  margin: 2rem;
+  background-color: #f4f6fc;
+  color: #050a30;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: 1.3rem;
+}
+#breakButtons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-left: 1rem;
+}
+.break-editing {
+  background-color: #050a30 !important; /* Amarillo claro, puedes cambiarlo */
+  color: white !important;
+
+  border: 1px solid white !important;
+  transition: background 0.3s;
 }
