Responsive, new actions and features added.

--- a/styles.css
+++ b/styles.css
@@ -7,17 +7,23 @@ body {
   padding: 0;
   color: white;
   font-family: "mk grotesk";
-  overflow: hidden;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .container {
-  position: absolute;
+  position: fixed;
   top: 0;
   background: linear-gradient(to bottom, #15009b, #2c2740);
   align-items: center;
   text-align: center;
-  height: 120dvh;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .title h1 {
@@ -52,13 +58,20 @@ body {
   justify-self: center;
   align-self: center;
   border-radius: 15px;
-  width: 30vw;
-  min-height: 60vh;
+  width: 40vw;
+  min-height: 80vh;
   padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-content: center;
+  box-shadow: 15px 15px 30px rgb(29, 9, 75), -15px -15px 30px rgb(99, 31, 189);
+}
+
+#breaksCreated {
+  max-height: 500px;
+  overflow-y: auto;
+  margin: 2rem;
 }
 #titleMain {
   font-size: 2rem;
@@ -76,16 +89,21 @@ body {
   justify-content: center;
   color: #050a30;
   background-color: rgba(223, 223, 223, 0.466);
-  position: relative;
-  justify-self: center;
+  position: fixed;
+
+  /* transform: translate(-50%, -20%); */
   z-index: 9999;
-  width: 60%;
+  width: 39vw;
   border-radius: 15px;
   padding: 6px;
-  transform: translateY(-20px);
+  /* transform: translateY(-20px); */
   align-items: center;
   opacity: 0;
   transition: all 0.2s ease;
+  height: 10vh;
+  font-size: 1.4rem;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 }
 #addBreak {
   cursor: pointer;
@@ -95,6 +113,7 @@ body {
 #addBreak:hover {
   background-color: #050a30;
   color: white;
+  transform: scale(1.1);
 }
 
 #setBreak .selectTime {
@@ -115,13 +134,14 @@ body {
   cursor: pointer;
 }
 
-#createBreakBtn {
+.breaksBtn {
   background-color: #050a30;
   margin: 10px;
   color: white;
   padding: 10px;
   cursor: pointer;
 }
+
 #dropdownHours {
   display: none; /* Oculto por defecto */
   position: absolute;
@@ -192,6 +212,7 @@ body {
   border-radius: 10px;
   padding: 10px;
   font-size: 1.3rem;
+  transition: all 0.3s ease;
 }
 #breakButtons {
   display: flex;
@@ -201,9 +222,67 @@ body {
   margin-left: 1rem;
 }
 .break-editing {
-  background-color: #050a30 !important; /* Amarillo claro, puedes cambiarlo */
+  background-color: #050a30 !important;
   color: white !important;
 
   border: 1px solid white !important;
   transition: background 0.3s;
+}
+
+@media (max-width: 1100px) {
+  .container {
+    height: 100vh;
+  }
+  #setBreak {
+    justify-self: flex-start;
+    width: 60vw;
+    height: 15vh;
+    font-size: 1.5rem;
+    top: 30vh;
+  }
+  .breaks {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .title h1 {
+    font-size: 3rem;
+  }
+  .title p {
+    font-size: 1.5rem;
+  }
+  #startBtn {
+    padding: 15px;
+    font-size: 0.8rem;
+  }
+  .breaks-section {
+    width: 80vw;
+    min-height: 70vh;
+    padding: 5px;
+  }
+}
+@media (max-width: 600px) {
+  .container {
+    height: 100vh;
+    overflow: hidden;
+  }
+  #setBreak {
+    width: 80vw;
+    height: 20vh;
+    font-size: 1.2rem;
+  }
+  .title h1 {
+    font-size: 2.5rem;
+  }
+  .title p {
+    font-size: 1.2rem;
+  }
+  #startBtn {
+    padding: 10px;
+    font-size: 0.7rem;
+  }
+  body {
+    overflow: hidden;
+  }
 }
